--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,11 +1,16 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: argoproj.io/v1alpha1
+kind: Rollout
 metadata:
-  name: nginx-deployment
-  labels:
-    app: nginx
+  name: nginx
+  namespace: default
 spec:
   replicas: 3
+  strategy:
+    canary:
+      steps:
+        - setWeight: 50         # Gradually release 50% of the traffic to the new version
+        - pause: {duration: 5m} # Pause for 1 minute to evaluate the rollout before proceeding
+        - setWeight: 100        # Release the remaining 50%
   selector:
     matchLabels:
       app: nginx
@@ -15,7 +20,20 @@ spec:
         app: nginx
     spec:
       containers:
-      - name: nginx
-        image: nginx
-        ports:
-        - containerPort: 80
+        - name: nginx
+          image: httpd:latest  # Replace with the actual image you want to deploy
+          ports:
+            - containerPort: 80
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 5
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 10
+            periodSeconds: 10
+  progressDeadlineSeconds: 300
