--- a/deployment.yaml
+++ b/deployment.yaml
@@ -21,19 +21,19 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: httpd:latest  # Replace with the actual image you want to deploy
+          image: nginx:latest  # Replace with the actual image you want to deploy
           ports:
             - containerPort: 80
           readinessProbe:
             httpGet:
               path: /
-              port: 80
+              port: 8080
             initialDelaySeconds: 5
             periodSeconds: 5
           livenessProbe:
             httpGet:
               path: /
-              port: 80
+              port: 8080
             initialDelaySeconds: 10
             periodSeconds: 10
   progressDeadlineSeconds: 300
