--- a/analysis.yaml
+++ b/analysis.yaml
@@ -8,11 +8,15 @@ spec:
     - name: unavailable-pods
       interval: 30s
       successCondition: "result[0] == 0"  # Pass if no pods are failing
-      failureCondition: "result[0] > 0"   # Fail if pods are in a bad state
+      failureCondition: "result[0] > 0"   # Fail if there are failing pods
       provider:
         kubernetes:
-          fieldRef:
-            fieldPath: status.unavailableReplicas
-          selector:
-            matchLabels:
-              app: nginx
+          query: |
+            jsonpath='{.items[*].status.phase}'
+          resource:
+            apiVersion: v1
+            kind: Pod
+            namespace: default
+            selector:
+              matchLabels:
+                app: nginx
