--- a/deployment.yaml
+++ b/deployment.yaml
@@ -24,19 +24,19 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: httpd:latest
+          image: nginx:latest
           ports:
             - containerPort: 80
           readinessProbe:
             httpGet:
               path: /
-              port: 80
+              port: 8080
             initialDelaySeconds: 5
             periodSeconds: 5
           livenessProbe:
             httpGet:
               path: /
-              port: 80
+              port: 8080
             initialDelaySeconds: 10
             periodSeconds: 10
   progressDeadlineSeconds: 300
